--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 </div>
                 <div id="score" class="mt-4">
-                    <h3>Seleziona la difficoltà e premi play!</h3>
+                    <h3 class="text-white fs-1 fw-bold">Seleziona la difficoltà e premi play!</h3>
                 </div>
             </main>
 
